# ezflags

./: Cargo.toml  readme.md
src/: flag.rs  lib.rs  tests.rs
